--- a/input_style.css
+++ b/input_style.css
@@ -1,14 +1,18 @@
 body {
-    background-color: #8B8C65;
-    color: #2f2f2f;
-    font-family: "Bebas Neue";
-    font-weight: lighter;
-    font-size: large;
+    background-color: white;
+    color: #2dd2f4;
+    font-family: Calibri;
+    font-size: medium;
+    text-transform: uppercase;
+}
+h1 {
+    font-family: Georgia;
+    text-transform: lowercase;
 }
 .header-img {
     width: 100%;
-    height: 200px;
-    background: url("https://www.ddiq.com/wp-content/uploads/2016/02/Financial-Institutions-header.jpg");
+    height: 1000px;
+    background: url("https://images.unsplash.com/photo-1434626881859-194d67b2b86f?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb");
     background-size: cover;
 }
 input[type=submit] {
@@ -16,10 +20,33 @@ input[type=submit] {
     border: none;
     color:white;
     cursor: pointer;
-    font-family: "Bebas Neue";
+    font-family: Calibri;
     font-weight: lighter;
     font-size: large;
 }
-.search-container {
+.topnav .search-container {
     float:right;
+}
+.topnav input[type=text] {
+    padding: 6px;
+    margin-top: 8px;
+    font-size: 17px;
+    border: none;
+}
+.topnav a {
+    color: #ff4f00;
+    text-decoration: none;
+    padding: 14px 16px;
+    display: block;
+    float:left;
+}
+.topnav a:hover {
+    background-color: #c7ea46;
+    color: #ff4f00;
+}
+a {
+    color: #2dd2f4;
+}
+a:hover {
+    color: #c7ea46;
 }
