--- a/react_js_app/App.css
+++ b/react_js_app/App.css
@@ -1,3 +1,19 @@
+.divCover {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.divCover img{
+  width: 70%;
+}
+#userFullNameError, #userQualificationError, #userLocationError, #userEmailError, #userPasswordError, #userSIEmailError, #userSIPasswordError, #userBioError, #editProfileForm, #userSurnameError {
+  display: none;
+}
+#userAvatar{
+  width: 120px;
+  height: 120px;
+}
+
 body {
   background-color: #f5fcff;
   color: #2dd2f4;
@@ -14,7 +30,6 @@ img {
   width:100%;
   height: 500px;
 }
-
 .title {
   display:flex;
   justify-content: center;
@@ -36,39 +51,12 @@ input[type=submit] {
   font-weight: lighter;
   font-size: large;
 }
-.RightHeader {
-  position: absolute;
-  right: 0px;
-  z-index: 1;
-  background-color: #ff781f;
-  height:100%;
-  width: 50%;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-.RightHeader a{
-  color: #D8F3FA;
-  padding: 14px 30px;
-  padding-top: 50px;
-  text-transform: lowercase;
-  font-size: 24px;
-  font-weight: bold;
-  font-family: Georgia;
-}
-.RightHeader a:hover {
-  background-color: #ff781f;
-  color: #98b4d4;
-}
 .Header {
   position: absolute;
   z-index: 1;
   background-color: #D8F3FA;
   height:100%;
-  width: 50%;
+  width: 25%;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -77,8 +65,9 @@ input[type=submit] {
   text-align: center;
 }
 .logoImg {
-  height: 250px;
-  width: 500px;
+  height: 200px;
+  width: 250px;
+  margin-bottom: 0;
 }
 .Header a {
   color: #ff4f00;
@@ -107,27 +96,30 @@ input[type=submit] {
   display:flex;
   justify-content: center;
   font-size: x-large;
-  padding-left:200px;
+}
+.VisibleHeader h1 {
+  margin-right: 300px;
+  margin-left: 300px;
 }
 .VisibleHeader input[type=text] {
   background-color: #f5fcff;
   font-size: large;
-  padding-left:500px;
-  padding-top:7%;
   border: none;
+  width: 150px;
 }
 .VisibleHeader .search-container button {
   background-color: #f5fcff;
   border:none;
   cursor:pointer;
   height:20px;
+  margin-top: 5%;
 }
 .threebars {
   border:none;
   font-size:x-large;
   background-color: #f5fcff;
-  padding-right: 500px;
   cursor:pointer;
+  width: 150px;
 }
 a {
   color: #2dd2f4;
@@ -135,4 +127,27 @@ a {
 }
 a:hover {
   color: #98b4d4;
+}
+.table {
+  width:100%;
+}
+.LandingHeader {
+  display: flex;
+  justify-content: center;
+  text-align:center;
+  font-size: 48px;
+}
+.Footer {
+  display: flex;
+  justify-content: center;
+  text-align:center;
+  font-size: 15px;
+  position:fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+.center {
+  margin-left: 300px;
+  margin-right: 300px;
 }
