--- a/react_js_app/App.css
+++ b/react_js_app/App.css
@@ -13,7 +13,6 @@
   width: 120px;
   height: 120px;
 }
-
 body {
   background-color: #f5fcff;
   color: #2dd2f4;
@@ -55,6 +54,7 @@ input[type=submit] {
   position: absolute;
   z-index: 1;
   background-color: #D8F3FA;
+  position: fixed;
   height:100%;
   width: 25%;
   margin: 0;
@@ -65,9 +65,9 @@ input[type=submit] {
   text-align: center;
 }
 .logoImg {
-  height: 200px;
-  width: 250px;
-  margin-bottom: 0;
+  height:100px;
+  width:100px;
+  margin-bottom:0;
 }
 .Header a {
   color: #ff4f00;
@@ -130,7 +130,58 @@ a:hover {
 }
 .table {
   width:100%;
+  height: 400px;
+  margin-left: auto;
+  margin-right: auto;
 }
+.table td {
+  text-align: center;
+  font-size: 30px;
+}
+.table tr a {
+  display:block;
+  height:400px;
+}
+.login {
+  background-image: url('./reach_in.jpg');
+}
+.about {
+  background-image: url('./reach_up.jpg');
+}
+.about a {
+  color: white;
+}
+.about a:hover {
+  color:gray;
+}
+.contact {
+  background-image: url('./reach_out.jpg');
+}
+.contact a{
+  color: #ff4f00;
+}
+.contact a:hover {
+  color: #964000;
+}
+.resources a{
+  color: #ff4f00;
+}
+.resources a:hover{
+  color: #964000;
+}
+.modules a{
+  color: #ff4f00;
+}
+.modules a:hover{
+  color: #964000;
+}
+.budget a{
+  color: #ff4f00;
+}
+.budget a:hover{
+  color: #964000;
+}
+
 .LandingHeader {
   display: flex;
   justify-content: center;
@@ -142,7 +193,6 @@ a:hover {
   justify-content: center;
   text-align:center;
   font-size: 15px;
-  position:fixed;
   left: 0;
   bottom: 0;
   width: 100%;
