--- a/full_react_app/src/App.css
+++ b/full_react_app/src/App.css
@@ -27,6 +27,7 @@ p {
 h1 {
   font-family: Georgia;
   text-transform: none;
+  font-weight: bold;
 }
 img {
   z-index: 0;
@@ -212,15 +213,23 @@ a:hover {
   margin-left:300px;
   margin-right:300px;   
 }
-.table th, .table td{
-  color:#ff4f00;
-  width:33%;
-}
 .budget_table {
   text-align:center;
 }
+.table th{
+  color:#ff4f00;
+  width:25%;
+}
 .table td {
   color:#2dd2f4;
+  width:25%;
+}
+.table{
+  margin-bottom:0;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0px 0px 3px gray;
 }
 .editProfileForm {
   width: 50%;
