--- a/full_react_app/src/App.css
+++ b/full_react_app/src/App.css
@@ -77,7 +77,7 @@ input[type=submit] {
 .Header a {
   color: #ff4f00;
   padding: 14px 30px;
-  padding-top: 20px;
+  padding-top: 15px;
   text-transform: lowercase;
   font-size: 24px;
   font-weight: bold;
@@ -259,4 +259,13 @@ a:hover {
 #forum td {
   box-shadow: 0px 0px 10px gray;
   height: 200px;
+}
+.imageinput {
+  text-align:center;
+}
+.listinput {
+  text-align:center;
+  width:30%;
+  margin-left:auto;
+  margin-right:auto;
 }
