--- a/full_react_app/src/App.css
+++ b/full_react_app/src/App.css
@@ -269,3 +269,11 @@ a:hover {
   margin-left:auto;
   margin-right:auto;
 }
+.logoTitle {
+  display:flex;
+  justify-content: center;
+  text-align:center;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top: 20px;
+}
